==> FASTSHIFT/Arduino-For-Keil/_Keilduino (AT32F4xx)/Core/gpio.c <==
#include "gpio.h"

void GPIOx_Init(GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin_x, pinMode_TypeDef pinMode_x, GPIOMaxSpeed_Type GPIO_Speed_x)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    uint32_t RCC_APB2PERIPH_GPIOx;
    GPIOMode_Type GPIO_Mode_x;

    if(GPIOx == GPIOA)     RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOA;
    else if(GPIOx == GPIOB)RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOB;
    else if(GPIOx == GPIOC)RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOC;
    else if(GPIOx == GPIOD)RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOD;
    else if(GPIOx == GPIOE)RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOE;
    else if(GPIOx == GPIOF)RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOF;
    else if(GPIOx == GPIOG)RCC_APB2PERIPH_GPIOx = RCC_APB2PERIPH_GPIOG;
    else return;

    if(pinMode_x == INPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_FLOATING;
    }
    else if(pinMode_x == INPUT_PULLUP)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_PU;
    }
    else if(pinMode_x == INPUT_PULLDOWN)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_PD;
    }
    else if(pinMode_x == INPUT_ANALOG)
    {
        GPIO_Mode_x  = GPIO_Mode_IN_ANALOG;
    }
    else if(pinMode_x == OUTPUT)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT_PP;
    }
    else if(pinMode_x == OUTPUT_OPEN_DRAIN)
    {
        GPIO_Mode_x  = GPIO_Mode_OUT_OD;
    }
    else if(pinMode_x == OUTPUT_AF_PP)
    {
        GPIO_Mode_x  = GPIO_Mode_AF_PP;
    }
    else if(pinMode_x == OUTPUT_AF_OD)
    {
        GPIO_Mode_x  = GPIO_Mode_AF_OD;
    }
    else
    {
        return;
    }

    GPIO_InitStructure.GPIO_Pins = GPIO_Pin_x;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_x;
    GPIO_InitStructure.GPIO_MaxSpeed = GPIO_Speed_x;

    RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_GPIOx, ENABLE);
    GPIO_Init(GPIOx, &GPIO_InitStructure);
}

void GPIO_JTAG_Disable(void)
{
    RCC_APB2PeriphClockCmd(RCC_APB2PERIPH_AFIO, ENABLE);
    GPIO_PinsRemapConfig(GPIO_Remap_SWJ_JTAGDisable, ENABLE);
}
